--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include tests/*.py
-recursive-include html/ *.js *.txt *.html *.inv *.png *.css
+recursive-include html/ *.js *.txt *.html *.inv *.png *.css *.doctree
