--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include tests/*.py
-recursive-include html/ *.js *.txt *.html *.inv *.png *.css *.doctree
+recursive-include html *.js *.txt *.html *.inv *.png *.css *.doctree
 include docs/*.txt
