--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,24 @@
 [tox]
 envlist = py24,py25,py26,py27
+
 [testenv]
-commands=python setup.py test
 deps=unittest2
+commands=python setup.py test
+
+[testenv:py26]
+commands=
+    python setup.py test
+    sphinx-build -b doctest docs html
+    sphinx-build docs html
+deps = 
+    unittest2
+    sphinx
+
+[testenv:py27]
+commands=
+    python setup.py test
+    sphinx-build -b doctest docs html
+    sphinx-build docs html
+deps = 
+    unittest2
+    sphinx
