--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,11 @@ envlist = py24,py25,py26,py27
 
 [testenv]
 deps=unittest2
-commands=unit2 discover
+commands=unit2 discover []
 
 [testenv:py26]
 commands=
-    unit2 discover
+    unit2 discover []
     sphinx-build -b doctest docs html
     sphinx-build docs html
 deps = 
@@ -16,7 +16,7 @@ deps =
 
 [testenv:py27]
 commands=
-    unit2 discover
+    unit2 discover []
     sphinx-build -b doctest docs html
     sphinx-build docs html
 deps = 
