--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py24,py25,py26,py27
+envlist = py24,py25,py26,py27,py31
 
 [testenv]
 deps=unittest2
@@ -22,3 +22,9 @@ commands=
 deps = 
     unittest2
     sphinx
+
+[testenv:py31]
+commands=
+    unit2 discover []
+deps = 
+    unittest2py3k
