Update to wing project file and unittest config file.

--- a/unittest.cfg
+++ b/unittest.cfg
@@ -1,11 +1,11 @@
 
 [unittest]
 plugins = 
+    unittest2.plugins.debugger
     unittest2.plugins.checker
     unittest2.plugins.doctestloader
     unittest2.plugins.matchregexp
     unittest2.plugins.moduleloading
-    unittest2.plugins.debugger
     unittest2.plugins.testcoverage
     unittest2.plugins.growl
     unittest2.plugins.filtertests
@@ -61,6 +61,8 @@ always-on = False
 
 [checker]
 always-on = False
+pep8 = False
+pyflakes = True
 
 [junit-xml]
 always-on = False
