--- a/unittest.cfg
+++ b/unittest.cfg
@@ -10,8 +10,22 @@ plugins =
     unittest2.plugins.growl
     unittest2.plugins.filtertests
     unittest2.plugins.junitxml
+    unittest2.plugins.timed
+    unittest2.plugins.counttests
 
-#verbosity = 
+excluded-plugins =
+
+# 0, 1 or 2 (default is 1)
+# quiet, normal or verbose
+# can be overriden at command line
+verbosity = normal
+
+# true or false
+# even if false can be switched on at command line
+catch =
+buffer =
+failfast =
+
 
 [matchregexp]
 always-on = False
@@ -25,8 +39,11 @@ errors-only = True
 always-on = False
 config =
 report-html = False
+# only used if report-html is false
 annotate = False
+# defaults to './htmlcov/'
 html-directory =
+# if unset will output to console
 text-file =
 branch = False
 timid = False
@@ -67,3 +84,11 @@ pyflakes = True
 [junit-xml]
 always-on = False
 #path = '~/report.xml'
+
+[timed]
+always-on = True
+threshold = 0.01
+
+[count]
+always-on = True
+enhanced = True
