Minor docs update

--- a/unittest.cfg
+++ b/unittest.cfg
@@ -12,6 +12,7 @@ plugins =
     unittest2.plugins.junitxml
     unittest2.plugins.timed
     unittest2.plugins.counttests
+    unittest2.plugins.logchannels
 
 excluded-plugins =
 
@@ -83,7 +84,7 @@ pyflakes = True
 
 [junit-xml]
 always-on = False
-#path = '~/report.xml'
+path = junit.xml
 
 [timed]
 always-on = True
