Adding jython, python 3.2 and pypy to tox configuration

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
-envlist = py24,py25,py26,py27,py31
+envlist = py24,py25,py26,py27,py31,pypy,py32,jython
 
 [testenv]
 deps=unittest2
 commands=unit2 discover []
+
 
 [testenv:py26]
 commands=
@@ -27,3 +28,13 @@ commands=
     unit2 discover []
 deps = 
     unittest2py3k
+
+[testenv:py32]
+commands=
+    unit2 discover []
+deps = 
+    unittest2py3k
+
+[testenv:pypy]
+deps=unittest2
+commands=unit2 discover []
