Use standard unittest for Python 3.2 tests

--- a/tox.ini
+++ b/tox.ini
@@ -31,9 +31,8 @@ deps =
 
 [testenv:py32]
 commands=
-    unit2 discover []
+    python -m unittest discover []
 deps = 
-    unittest2py3k
 
 [testenv:pypy]
 deps=unittest2
